2010-04-18  Karel Klíč  <karel@agata>

	* graphicsscene.py (GraphicsScene.__setSceneSize): Scene does not
	include top and bottom borders.
	(GraphicsScene.recalculateBorders): New function.
	(GraphicsScene.updateAppearance): Changed ordering to propagate
	top and bottom border changes to bars.

	* timebar.py (TimeBar.__init__): No height needed for
	the initialization.
	(TimeBar.setHeight): New function.

	* loadfiletask.py (LoadFileTask.postRun): updateFromData should
	set the best width.

	* timeaxis.py (TimeAxis.__init__): Set some initial width.

	* absorbanceaxis.py (AbsorbanceAxis.__init__): Set some initial
	height and residualStart values.

	* main.py (MainWindow.editAppearance): Fit scene in view after
	updating scene size.

	* graphicsview.py (GraphicsView.fitSceneInView): New function.
	Better name for resizeEvent(), when called from outside.

	* settings.py (Settings.onSceneRectChanged): Do not trust the rect,
	read the width directly from the scene (the rect includes the
	borders, which are now not a part of scene width).

	* graphicsscene.py (GraphicsScene): Scene width does not include
	left and right borders.
	(GraphicsScene.updateAppearance): Adjust left border depending on
	the absorbance axis bounding rect. Update scene using __setSceneSize
	to tell every item in the scene about the left border change.
	(GraphicsScene.__setSceneSize): Scene width does not include
	left and right borders.
	Do not pass height as a variable, as height is always constant.

	* absorbanceaxis.py (AbsorbanceAxis.update): Position depends on
	caption text height.

	* timebarpair.py (TimeBarPair): Make it subclass of QGraphicsItem.
	Empty QGraphicsLineItem used to avoid NotImplemented exceptions.
	(TimeBarPair.__init__): All child graphics items belong to
	the TimeBarPair, as it's now a part of the scene.
	(TimeBarPair.updatePositionFromData): Start from 0 instead of
	LEFT_BORDER.
	(FullLightBarPair.__init__): Remove leftBorder parameter.